--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/cayman@v0.2.0
-show_downloads: true
+show_downloads/: true
 
 # google_analytics:[Your Google Analytics tracking ID]
 
